--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html>
 <head>
     <title>jquery.ytProgress demo</title>
-    <link href="ytprogress.jquery.css" rel="stylesheet" type="text/css">
+    <link href="ytLoad.jquery.css" rel="stylesheet" type="text/css">
 
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="jquery.transit.js"></script>
-    <script type="text/javascript" src="ytprogress.jquery.js"></script>
+    <script type="text/javascript" src="ytLoad.jquery.js"></script>
     <script type="text/javascript">
 
         $(document).ready(function() {
-            $.ytProgress();
+            $.ytLoad();
 
             $('#loadButton').click(function(){
-                $('#ajaxContents').load('ajax.html');
+                $('#ajaxContent').load('ajax.html');
             });
         });
     </script>
@@ -24,13 +24,7 @@
 <body>
     <input id="loadButton" type="submit" value="Load">
 
-    <div id="test" style="margin-top: 50px;">
-
-    </div>
-
     <div id="ajaxContent">
-    </div>
-    <div id="ajaxContents">
     </div>
 </body>
 </html>
