updated website title

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>jquery.ytProgress demo</title>
+    <title>ytLoad demo</title>
     <link href="ytLoad.jquery.css" rel="stylesheet" type="text/css">
-
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="jquery.transit.js"></script>
+
     <script type="text/javascript" src="ytLoad.jquery.js"></script>
     <script type="text/javascript">
 
