added social coding buttons

--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
 
             #topBar {
                 height: 25px;
-                padding-top: 7px;
-                padding-bottom: 8px;
+                padding: 7px;
                 padding-left: 15px;
                 background-color: #F1F1F1;
+            }
+
+            #socialCodingButtons {
+                float: right;
             }
 
             #ajaxContent {
@@ -44,6 +47,14 @@
     <body>
         <div id="topBar">
             <input id="loadButton" type="submit" value="Load">
+            <div id="socialCodingButtons">
+                <iframe src="http://ghbtns.com/github-btn.html?user=Mythli&repo=jquery.ytload&type=watch&count=true"
+                        allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
+                <iframe src="http://ghbtns.com/github-btn.html?user=mythli&repo=jquery.ytload&type=fork&count=true"
+                        allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
+                <iframe src="http://ghbtns.com/github-btn.html?user=Mythli&repo=jquery.ytload&type=follow&count=true"
+                        allowtransparency="true" frameborder="0" scrolling="0" width="140" height="20"></iframe>
+            </div>
         </div>
         <div id="ajaxContent">
         </div>
