removed unnecessary div

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 float: right;
             }
 
-            #ajaxContentContainer {
+            #ajaxContent {
                 width: 800px;
                 margin: auto;
                 margin-top: 15px;
@@ -102,9 +102,7 @@
                         allowtransparency="true" frameborder="0" scrolling="0" width="140" height="20"></iframe>
             </div>
         </div>
-        <div id="ajaxContentContainer">
-            <div id="ajaxContent">
-            </div>
+        <div id="ajaxContent">
         </div>
     </body>
 </html>
