--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ytLoad demo</title>
+        <title>ytLoad Demo</title>
         <link href="ytLoad.jquery.css" rel="stylesheet" type="text/css">
 
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
