--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                         });
                         $.ytLoad('start');
                         $.ytLoad('complete');
+                        $.ytLoad('error');
                     },
 
                     customDurations: function() {
